fix gap in grid

--- a/_sass/3-sections/_projects.sass
+++ b/_sass/3-sections/_projects.sass
@@ -14,6 +14,7 @@
   display: flex
   flex-wrap: wrap
   justify-content: space-between
+  direction: row
   width: 100%
   align-content: flex-start
   
